--- a/static/style.css
+++ b/static/style.css
@@ -58,3 +58,4 @@ ul li {
     font-size: 14px; /* Размер шрифта */
     text-align: center; /* Центрирование текста */
     color: #ff0000; /* Красный цвет текста */
+}
